Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 01. 12. 2021</h5>
+<h5>Čtvrtek, 02. 12. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a hovězím masem</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 1.12.2021</div>
+<div class="nadpis">Čtvrtek 2.12.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Tvarožník</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Vanilková pěna s drobenkou s lesním ovocem</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s hruškami a mandlemi</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kuřecí kaldoun, kořenová zelenina, vaječné nudle- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kuřecí kaldoun, kořenová zelenina, vaječné nudle- s menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Moravský vrabec, dušený špenát, bramborový knedlík, smažená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Indické butter chicken, basmati rýže, koriandr, sezam <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Koprová omáčka s parmazánem, pošírované vejce, pečené grenaille, pažitka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,19 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ruský boršč se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ve čtvrtek 2.12.2021 a v pátek 3.12.2021 nelze z technických důvodů přijímat platební karty. Děkujeme za pochopení.</td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Medailonky z vepřové pečeně v sýrovém těstíčku, mačkané brambory s cibulkou, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo s uzeným masem, volské oko, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, cibule, hořčice </td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, červené zelí </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky se smetanou a vejci, salát coleslaw</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na celerovém pyré, grilované rajče s bazalkovým pestem, parmazán, vařené vejce</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné houbové omáčce, restované špecle</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Mexické burritos v pšeničné tortille, hranolky, zakysaná smetana</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové pečeně na roštu, smetanová omáčka s barevným drceným pepřem, hranolky, volské oko</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Trhané listy salátu se zeleninou ochucené caesar dresinkem, filírovaná kuřecí prsa, plátky opečené slaniny, večkové krutóny, parmazán </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s červenou cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené červené zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cmunda po kaplicku (uzené se zelím v bramboráku)</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu s česnekovou klobásou a sázeným vejcem, pečené brambory s kmínem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou gratinovaný šunkou a sýrem, mrkvové pyré, zelený hrášek, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí gyros na ledovém salátu, smažené bramborové hranolky, tzatziky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně s kovbojskými fazolemi, smažené bramborové plátky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát promíchaný olivovým olejem, filírovaná vepřová panenka, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</h5><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanovo jableční řez s čokoládou a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -160,7 +114,7 @@ a skořicovým cukrem 1a,3,7</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s brambory, houbami a vejci 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Pečený jitrnicový prejt s vařenými brambory, salátem z kysaného zelí a hořčicí 1a,7,10,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí nudličky Stroganov se žampiony, nakládanou okurkou, smetanou a hranolky 1a,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Mix gril z vepřové pečeně a kuřecích prsou se smetanovou omáčkou z Gorgonzoly, brokolicí a bramborovými noky 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Pivní krémová cibulačka s chlebovými krutony 1abc,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na česneku se špenátem a našimi bramborovými knedlíky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Grilované kuřecí prso Supreme se zeleninovou ratatouille a opečenou kukuřičnou polentou 1a</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát Nicoise s tuňákem, vejcem, černými olivami, fazolkami, pečenými brambory Grenaille a hořčičným dresinkem 3,4,10</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
