Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 02. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a hovězím masem</strong>
+<strong>Cizrnová s mrkví</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený sýr s hranolkami a tatarkou</strong>
+<strong>Moravský vrabec se zelím a bramborovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Hrachová kaše s klobásou, cibulkou a okurkou</strong>
+<strong>Milánské penne s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 2.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Ořechový košíček s čokoládou  </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Vanilková roláda s citronovým krémem, bez lepku  </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čokoládová roláda bez lepku </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém, kokosové mléko, tahini, citronová šťáva samostatně <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém, kokosové mléko, tahini, citronová šťáva s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí roastbeef, křenová omáčka, pečené batáty, polníček  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Cottage pie - zapečené hovězí maso s bramborovou kaší a sýrem cheddar, hrášek v máslové emulzi, rukola  <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, listový salát, cherry rajčata, slunečnicové semínko, dijonský dresink, toast s bylinkovým máslem <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -122,7 +162,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se salsou z cerstvych rajcat s cervenou cibuli, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka a lososa se salsou z cerstvych rajcat s cervenou cibuli, korenena ryze s beluga cockou, salatek 169</li><li>Kasmirska hovezi korma s kokosovym mlekem, orisky, a pecenou dyni, jasminova ryze 139</li><li>Smazene rizecky ze seleciho hrbetu a kyty, bramborovy salat s cerstvymi okurkami, jogurtem a majonezou, citron {L} 169</li><li>Pecene papriky plnene frijoles refritos {stouchane fazole} se lnenym seminkem, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s kaparovym maslem, stouchane brambory s kapustou a smazenou cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstve prazmy s kaparovym maslem, stouchane brambory s kapustou a smazenou cibulkou, salatek z cervene repy 169</li><li>Ramen s grilovanym veprovym v japonske miso marinade, psenicnymi nudlemi, pak coj a sazenym vejcem v silnem hovezim vyvaru se  zelenymi bylinkami {L} 139</li><li>Provensalsky cassoulet s pecenou husou, klobaskami, maslovymi fazolemi, korenovou zeleninou a rajcaty, chlebova placka {L} 169</li><li>Libanonsky hummus z pecene dyne s tahini, balkanskym syrem a olivovym olejem, arabsky chleb, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
