--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -67,6 +67,11 @@
 <div class="cena">45 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">250g Chlazený kuskus salát s grilovanou zeleninou, olivami a balkánským sýrem</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Květákový krém, kokosové mléko, tahini, citronová šťáva samostatně <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
