--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -93,7 +93,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, listový salát, cherry rajčata, slunečnicové semínko, dijonský dresink, toast s bylinkovým máslem <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, listový salát, rajčata, slunečnicové semínko, dijonský dresink, toast s bylinkovým máslem <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
