--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,14 +7,14 @@
 <h5>Pátek, 03. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Cizrnová s mrkví</strong>
+<strong>Vývar se zeleninou a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Moravský vrabec se zelím a bramborovým knedlíkem</strong>
+<strong>Kuřecí Čína s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
