Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,10 +21,10 @@
 						</span>
 </p>
 <p>
-<strong>Milánské penne s parmazánem</strong>
+<strong>Buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							105,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,37 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 3.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">250g Chlazený kuskus salát s grilovanou zeleninou, olivami a balkánským sýrem</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka s hovězím masem  samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka s hovězím masem  s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Grilované kuřecí prso, sweet&amp;sour omáčka, dušená rýže, jarní cibulka, sezam <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně, pure z červeného zelí, opečené granille, rozmarýnová omáčka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Bramborove gnocchi, omáčka z červené řepy, fazolové lusky, riccota, cherry rajče  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -125,7 +155,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s kaparovym maslem, stouchane brambory s kapustou a smazenou cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstve prazmy s kaparovym maslem, stouchane brambory s kapustou a smazenou cibulkou, salatek z cervene repy 169</li><li>Ramen s grilovanym veprovym v japonske miso marinade, psenicnymi nudlemi, pak coj a sazenym vejcem v silnem hovezim vyvaru se  zelenymi bylinkami {L} 139</li><li>Provensalsky cassoulet s pecenou husou, klobaskami, maslovymi fazolemi, korenovou zeleninou a rajcaty, chlebova placka {L} 169</li><li>Libanonsky hummus z pecene dyne s tahini, balkanskym syrem a olivovym olejem, arabsky chleb, salatek {L} 139</li></ol>
+<ol><li>Peceny pstruh s omackou z pecenych paprik, pohanka se zeleninou a smazenou cibulkou, salatek 139</li><li>Peceny filet z cerstveho morskeho dasa s omackou z pecenych paprik, pohanka se zeleninou a smazenou cibulkou, salatek 175</li><li>Libanonske pikantni hovezi s cizrnou, zeleninou a rajcaty v arabskem chlebu s balkanskym syrem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z australske hovezi plece {angus} se susenymi rajcaty, hrachova kase, salatek z kysaneho zeli 169</li><li>Smazene cuketove karbanatky s camembertem, stouchane brambory s kapustou, salatek z cervene repy {L} 139</li></ol>
 </td>
 </tr>
 </table>
