--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 03. 12. 2021</h5>
+<h5>Sobota, 04. 12. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a nudlemi</strong>
@@ -50,39 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 3.12.2021</div>
+<div class="nadpis">Sobota 4.12.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">250g Chlazený kuskus salát s grilovanou zeleninou, olivami a balkánským sýrem</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka s hovězím masem  samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka s hovězím masem  s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Grilované kuřecí prso, sweet&amp;sour omáčka, dušená rýže, jarní cibulka, sezam <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně, pure z červeného zelí, opečené granille, rozmarýnová omáčka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Bramborove gnocchi, omáčka z červené řepy, fazolové lusky, riccota, cherry rajče  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -93,10 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ve čtvrtek 2.12.2021 a v pátek 3.12.2021 nelze z technických důvodů přijímat platební karty. Děkujeme za pochopení.</td><td class="menuPrice"></td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku (5ks), hanácký zelný salát</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodem, šlehačkou a karamelem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené francouzské brambory s uzeným masem a rozšlehanými vejci, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka s fazolovými lusky a anglickou slaninou, sázené vejce na šunce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kapsa z kuřecích prsou plněná šunkou, žampióny a vejci, mačkané brambory s cibulkou</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná kuřecími stripsy, ledovým salátem, zeleninou, kyselou okurkou a mexickým dresinkem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, hermelín v těstíčku, brusinky, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová </td><td class="menuPrice">37,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Vepřový guláš s cibulí a feferonkou, naše bramboráčky</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vejcem, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s pórkem, smažené bramborové plátky, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Medailonky z kuřecích prsou v bramboráku (5ks), hanácký zelný salát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Pšeničná tortila plněná vepřovou panenkou, sýrem, ledovým salátem, zeleninou a česnekovým dresinkem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou na grilované zelenině s bazalkovým pestem, rukola, rajčaty a strouhaný parmazán</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine carbonara s filírovanou vepřovou panenkou, strouhaný parmazán</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hořčičné omáčce, restované špetcle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů promíchaný olivovým olejem, kousky kuřecích prsou, restovaná anglická slanina, hoblinky parmazánu, česnekové tousty</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanovo jableční řez s čokoládou a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -110,44 +83,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Tlačenka s cibulovým salátem, octem a naším chlebem 1ab</td>
-<td class="pricem">89 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Gulášová z hovězího krku s domácí majoránkovou houskou 1a</td>
-<td class="pricem">69 Kč</td>
-</tr>
-<tr>
-<td class="amount">1 ks</td>
-<td class="title">Pečené vepřové koleno v medovo pivní marinádě s variací hořčic,
-		křenem, cibulovým chlebem a nakládanou zeleninou 1abc,10</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Dušená hovězí líčka na červeném víně
-s bramborovo pastinákovým pyré a restovanou zeleninou
-se žampiony 1a,7,9,12</td>
-<td class="pricem">239 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Domácí vdolky s povidly, tvarohovým krémem
-a skořicovým cukrem 1a,3,7</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Rajská s těstovinami 1a,3,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Sekaná svíčková s našimi houskovými knedlíky 1a,3,7,9,10,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Smažený hermelín plněný šunkou s mačkanými brambory s pažitkou, naší tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí perkelt se zeleninou a zakysanou smetanou s dušenou rýží 1a,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
