Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 06. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a nudlemi</strong>
+<strong>Hrachová polévka s klobásou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí Čína s rýží</strong>
+<strong>Znojemská hovězí pečeně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Buchtičky s vanilkovým krémem</strong>
+<strong>Salát s grilovanými kuřecími špalíky a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							129,-
 						</span>
 </p>
 <p>
