Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s omackou z pecenych paprik, pohanka se zeleninou a smazenou cibulkou, salatek 139</li><li>Peceny filet z cerstveho morskeho dasa s omackou z pecenych paprik, pohanka se zeleninou a smazenou cibulkou, salatek 175</li><li>Libanonske pikantni hovezi s cizrnou, zeleninou a rajcaty v arabskem chlebu s balkanskym syrem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z australske hovezi plece {angus} se susenymi rajcaty, hrachova kase, salatek z kysaneho zeli 169</li><li>Smazene cuketove karbanatky s camembertem, stouchane brambory s kapustou, salatek z cervene repy {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a tapenadou z cernych oliv, teply cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstrveho halibuta s pecenymi rajcaty a tapenadou z cernych oliv, teply cockovy salat s paprikami a zeleninou 169</li><li>Palive bengalske jalfrezi s krutim masem, pecenymi paprikami, cerstvym chilli a lzici zakysane smetany, jasminova ryze, salatek 139</li><li>Grilovane medailonky ze seleciho hrbetu a kyty s merunkovym catny, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s restovanymi zampiony na cibulce, arabske placky, salatek 139</li></ol>
 </td>
 </tr>
 </table>
